--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://gatispaurans-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1zb3xb8zlq14.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer.1zchb4i1isjs.us-south.codeengine.appdomain.cloud/
