--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,48 +12,47 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.12
 
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.12
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
+      - name: Print working directory
+        run: pwd
 
-    - name: Print working directory
-      run: pwd
-
-    - name: Run Linter
-      run: |
-        pwd
-        # This command finds all Python files recursively and runs flake8 on them
-        find . -name "*.py" -exec flake8 {} +
-        echo "Linted all the python files successfully"
+      - name: Run Linter
+        run: |
+          pwd
+          # This command finds all Python files recursively and runs flake8 on them
+          find . -name "*.py" -exec flake8 {} +
+          echo "Linted all the python files successfully"
 
   lint_js:
-  name: Lint JavaScript Files
-  runs-on: ubuntu-latest
+    name: Lint JavaScript Files
+    runs-on: ubuntu-latest
 
-  steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Install Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 14
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
 
-    - name: Install dependencies
-      run: |
-        npm ci || npm install
-        npx eslint --version
+      - name: Install dependencies
+        run: |
+          npm ci || npm install
+          npx eslint --version
 
-    - name: Run ESLint
-      run: |
-        npx eslint ./server/database --ext .js,.jsx
+      - name: Run ESLint
+        run: |
+          npx eslint ./server/database
