--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,13 +46,15 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 18
 
       - name: Install dependencies
         run: |
           npm ci || npm install
           npx eslint --version
+        working-directory: ./server
 
       - name: Run ESLint
         run: |
           npx eslint ./server/database
+        working-directory: ./server
