Update2 main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,5 +56,5 @@ jobs:
 
       - name: Run ESLint
         run: |
-          npx eslint ./server/database
+          npx eslint ./database
         working-directory: ./server
